Add video section for 'The Gist Mill' introduction
Added a new video section with an introductory video.

--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
         speech-to-text systems, a potential speech "prosthesis" that infers meaning through tone and other auditory communication beyond words — all designed for real clinic environments.
       </p>
     </section>
+    
+    <section class="video-section">
+      <h2 class="video-title">The Gist Mill — Noir Introduction</h2>
+
+      <video controls preload="metadata" style="width:100%; max-width:800px; display:block; margin:20px auto; border-radius:6px;">
+        <source src="domain-blindness.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+      </video>
+    </section>
 
     <section>
       <h2>Our Projects</h2>
