Revise company overview and project details
Updated company description and project focus in index.html.

--- a/index.html
+++ b/index.html
@@ -98,14 +98,11 @@
     <section>
       <h2>What We Do</h2>
       <p>
-        The Gist Mill is a small, independent engineering studio focused on creating practical,
-        high-performance tools for physical therapy and healthcare workflows.
-        We build software that cuts through noise, automates complexity, and lets clinicians spend more
-        time on real patient care.
+        The Gist Mill is a small, independent software development company owned by a physical therapist. Our focus is developing lightweight, clinician friendly documentation systems. Additionally we hope to build software and hardware that can enhance communication at low compuutational cost guided by rehabilitation specialists.
       </p>
       <p>
-        Our work is currently focused on making a robust digital clipboard that uses digital handwriting recognition through a stylus-based charting interface, future projects include
-        speech-to-text systems, a potential speech "prosthesis" that infers meaning through tone and other auditory communication beyond words — all designed for real clinic environments.
+        Our work is currently focused on making a robust digital clipboard that uses digital handwriting recognition through a stylus-based charting interface. This is currenlty being designed as an adjunct to complement existing documentation systems though no formal agreements have been made with established industry EMR providers. Future projects include
+        speech-to-text systems, a potential speech "prosthesis" that infers meaning through tone and other auditory communication beyond words, OCR training (fine tuning) pipelines and the development of "astigmatism" dual vision model to better generalize messy handwriting variations.
       </p>
     </section>
     
