Revise company overview and project details in index.html
Updated company description and project focus for clarity.

--- a/index.html
+++ b/index.html
@@ -98,12 +98,14 @@
     <section>
       <h2>What We Do</h2>
       <p>
-        The Gist Mill is a small, independent software development company owned by a physical therapist. Our focus is developing lightweight, clinician friendly documentation systems. Additionally we hope to build software and hardware that can enhance communication at low compuutational cost guided by rehabilitation specialists.
+        The Gist Mill is a small, independent software studio founded and operated by a physical therapist. Our work centers on building lightweight, clinician-friendly documentation tools and exploring new ways to improve communication in clinical environments using low-compute, accessible technology.
       </p>
       <p>
-        Our work is currently focused on making a robust digital clipboard that uses digital handwriting recognition through a stylus-based charting interface. This is currenlty being designed as an adjunct to complement existing documentation systems though no formal agreements have been made with established industry EMR providers. Future projects include
-        speech-to-text systems, a potential speech "prosthesis" that infers meaning through tone and other auditory communication beyond words, OCR training (fine tuning) pipelines and the development of "astigmatism" dual vision model to better generalize messy handwriting variations.
+        Our current focus is the development of a digital clipboard system that uses stylus-based handwriting recognition to streamline point-of-care documentation. This tool is being designed as an adjunct to existing EMR workflows, with no formal agreements or integrations in place at this time.
       </p>
+      </p>
+        Active and exploratory projects include: a speech-to-text engine tailored for noisy clinic environments designed as an optional, push-to-activate speech-to-text tool, used only when the therapist intentionally holds a physical button to dictate longer notes or descriptions that would be impractical to write by hand.
+        an early research phase model of a dual-vision “astigmatism” model intended to improve generalization on messy, real-world handwriting.
     </section>
     
     <section class="video-section">
