--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         Our current focus is the development of a digital clipboard system that uses stylus-based handwriting recognition to streamline point-of-care documentation. This tool is being designed as an adjunct to existing EMR workflows, with no formal agreements or integrations in place at this time.
       </p>
       </p>
-        Active and exploratory projects include: a speech-to-text engine tailored for noisy clinic environments designed as an optional, push-to-activate speech-to-text tool, used only when the therapist intentionally holds a physical button to dictate longer notes or descriptions that would be impractical to write by hand.
-        an early research phase model of a dual-vision “astigmatism” model intended to improve generalization on messy, real-world handwriting.
+        Active and exploratory projects include: a speech-to-text engine tailored for noisy clinic environments designed as an optional, push-to-activate speech-to-text tool, used only when the therapist intentionally holds a physical button to dictate longer notes or descriptions that would be impractical to write by hand,
+        and an early research phase model of a dual-vision “astigmatism” model intended to improve generalization on messy, real-world handwriting.
     </section>
     
     <section class="video-section">
