Revise description and video title in index.html
Updated the description meta tag and modified text for clarity.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Gist Mill</title>
-  <meta name="description" content="The Gist Mill is a small independent studio in the early stages of building distilled, PT-focused tools: PT-GPT, Clipboard, Charteyes, and Chartears.">
+  <meta name="description" content="The Gist Mill is a small independent studio in the early stages of building distilled, PT-focused tools: Clipboard and Charteyes.">
   <style>
     :root {
       --bg: #0b0b0b;
@@ -104,12 +104,12 @@
         Our current focus is the development of a digital clipboard system that uses stylus-based handwriting recognition to streamline point-of-care documentation. This tool is being designed as an adjunct to existing EMR workflows, with no formal agreements or integrations in place at this time.
       </p>
       </p>
-        Active and exploratory projects include: a speech-to-text engine tailored for noisy clinic environments designed as an optional, push-to-activate speech-to-text tool, used only when the therapist intentionally holds a physical button to dictate longer notes or descriptions that would be impractical to write by hand,
+        Active and exploratory projects include: a push-to-activate speech-to-text feature that works only while the therapist is physically holding a button, allowing longer dictated notes when handwriting isn’t efficient,
         and an early research phase model of a dual-vision “astigmatism” model intended to improve generalization on messy, real-world handwriting.
     </section>
     
     <section class="video-section">
-      <h2 class="video-title">The Gist Mill — Noir Introduction</h2>
+      <h2 class="video-title">The Gist Mill — Introduction</h2>
 
       <video controls preload="metadata" style="width:100%; max-width:800px; display:block; margin:20px auto; border-radius:6px;">
         <source src="domain-blindness.mp4" type="video/mp4">
