Refactor video section into chapter format

--- a/index.html
+++ b/index.html
@@ -107,15 +107,44 @@
         Active and exploratory projects include: a push-to-activate speech-to-text feature that works only while the therapist is physically holding a button, allowing longer dictated notes when handwriting isn’t efficient,
         and an early research phase model of a dual-vision “astigmatism” model intended to improve generalization on messy, real-world handwriting.
     </section>
-    
-    <section class="video-section">
-      <h2 class="video-title">The Gist Mill — Introduction</h2>
 
-      <video controls preload="metadata" style="width:100%; max-width:800px; display:block; margin:20px auto; border-radius:6px;">
-        <source src="domain-blindness.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-      </video>
+    <section class="noir-chapters">
+      <h2>The Gist Mill — Introduction</h2>
+
+      <div class="chapter-grid">
+
+        <!-- Chapter 1 – actual video -->
+        <div class="chapter-card">
+          <h3>Chapter 1 — Domain Blindness</h3>
+          <video controls preload="metadata" class="chapter-video">
+            <source src="domain-blindness.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+          <p class="chapter-caption">
+            A two minute story.
+          </p>
+        </div>
+
+        <!-- Chapter 2 – placeholder -->
+        <div class="chapter-card">
+          <h3>Chapter 2 — Coming Soon</h3>
+          <div class="chapter-placeholder">
+            In production. The next episode continues the story as the clipboard takes shape.
+          </div>
+        </div>
+
+        <!-- Chapter 3 – placeholder -->
+        <div class="chapter-card">
+          <h3>Chapter 3 — Coming Soon</h3>
+          <div class="chapter-placeholder">
+            Reserved space for the third act of the noir series.
+          </div>
+        </div>
+
+      </div>
     </section>
+
+    
 
     <section>
       <h2>Our Projects</h2>
