Adjust max-height of chapter video to 280px

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     /* THIS controls the video size */
     .chapter-video {
       width: 100%;
-      max-height: 320px;      /* reduce this number for a shorter box (e.g. 280) */
+      max-height: 280px;      /* reduce this number for a shorter box (e.g. 280) */
       border-radius: 4px;
       display: block;
       margin-bottom: 0.5rem;
@@ -170,6 +170,7 @@
       </p>
         Active and exploratory projects include: a push-to-activate speech-to-text feature that works only while the therapist is physically holding a button, allowing longer dictated notes when handwriting isn’t efficient,
         and an early research phase model of a dual-vision “astigmatism” model intended to improve generalization on messy, real-world handwriting.
+      </p>
     </section>
 
     <section class="noir-chapters">
@@ -212,7 +213,7 @@
 
     <section>
       <h2>Our Projects</h2>
-      <div class="projects-list"
+      <div class="projects-list">
         <div class="project">
           <h3>Clipboard</h3>
           <p>A stylus-first documentation interface for fast, structured charting at the point of care.</p>
