--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
     .logo .blades {
       animation: spin 18s linear infinite;
       transform-origin: 50% 50%;
+      top: -10px;
+      bottom: auto;
     }
     
     @keyframes spin {
